--- a/front-end/navbar/navbar.css
+++ b/front-end/navbar/navbar.css
@@ -11,8 +11,7 @@ body {
 header {
   width: 100%;
   height: 100vh;
-  background: url(https://picsum.photos/1000/700?image=0
-) no-repeat 50% 50%;
+  background: url(https://picsum.photos/1000/700?image=0) no-repeat 50% 50%;
   background-size: cover;
 }
 
@@ -50,5 +49,59 @@ nav ul {
 }
 
 nav.black ul {
-  
+  background: #000;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+}
+
+.menu-icon {
+width: 100%;
+background: #000;
+text-align: right;
+box-sizing: border-box;
+padding: 15px 24px;
+cursor: pointer;
+color: #fff
+display: none;
+}
+
+@media(max-width: 580px) {
+  .logo {
+    position: fixed;
+    top: 0;
+    margin-top: 16px;
+  }
+
+  nav ul {
+    max-height: 0px;
+    background: #000;
+  }
+
+  nav.black ul {
+    background: #000;
+  }
+
+  .showing {
+    max-height: 20em;
+  }
+
+  nav ul li {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 24px 0;
+    text-align: center;
+  }
+
+  .menu-icon {
+    display: block;
+  }
 }
