background image added

--- a/front-end/navbar/navbar.css
+++ b/front-end/navbar/navbar.css
@@ -11,7 +11,7 @@ body {
 header {
   width: 100%;
   height: 100vh;
-  background: url(https://picsum.photos/1000/700?image=0) no-repeat 50% 50%;
+  background: url(https://image.ibb.co/iDysC9/IMG_20180329_141451485.jpg) no-repeat 50% 50%;
   background-size: cover;
 }
 
