--- a/front-end/navbar/navbar.css
+++ b/front-end/navbar/navbar.css
@@ -9,6 +9,50 @@ body {
 
 }
 
+/* reviews & Testimonals */
+#customer-testimonals-id {
+  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.customer-testimonals-container {
+    box-sizing: border-box;
+}
+.column {
+    float: left;
+    width: 28.33%;
+    padding: 10px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* end of reviews & testimonals  */
+
+
+/* about lisa */
+
+.lisa-introduction {
+  margin: 0 auto;
+   max-width: 300px;
+   border: solid 2px #ccc;
+   padding: 12px;
+   float: left;
+}
+
+.lisa-image {
+  height: auto;
+  width: auto;
+  max-width: 300px;
+  max-height: 300px;
+  float: left; 
+}
+
+
+/* end of about lisa */
 header {
   width: 100%;
   height: 100vh;
@@ -91,7 +135,6 @@ display: none;
 .nav {
   font-family: Prime;
   text-align: center;
-  text-transform: uppercase;
   font-weight: 500;
   letter-spacing: 1px;
 }
@@ -145,7 +188,7 @@ display: none;
 .nav a:hover:before,
 .nav a:hover:after {
   transform: translate(0%, 0%);
-  opacity: 1
+  opacity: 1;
   }
 
 
