--- a/front-end/navbar/navbar.css
+++ b/front-end/navbar/navbar.css
@@ -48,7 +48,7 @@ body {
   width: auto;
   max-width: 300px;
   max-height: 300px;
-  float: left; 
+  float: left;
 }
 
 
@@ -192,6 +192,35 @@ display: none;
   }
 
 
+
+/* footer */
+
+#container {
+   min-height:100%;
+   position:relative;
+   height:100%;
+}
+
+#header {
+   background:#ff0;
+   padding:10px;
+}
+#body {
+   padding:10px;
+   padding-bottom:60px;   /* Height of the footer */
+}
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
+   background:#6cf;
+}
+
+
+
+
+/* end of footer */
 
 /* mobile responsive */
 
