--- a/front-end/landing-page.css
+++ b/front-end/landing-page.css
@@ -49,6 +49,15 @@ html {
 
 /* end landing page title */
 
+/* testimonals */
+.customer-testimonals {
+  font-family: sans-serif;
+  font-style: italic;
+  text-align: center;
+}
+
+/* end of testimonals */
+
 @media(max-width: 768px){
     .navbar {background-color: #007bff !important; }
 }
