--- a/front-end/landing-page.css
+++ b/front-end/landing-page.css
@@ -140,6 +140,20 @@ section h5 {
 
 }
 
+.fa-address-book {
+  background: grey;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  line-height: 100px;
+  vertical-align: middle;
+  border-radius: 50%;
+  padding: 30px;
+
+}
+
+/* end of contact section */
+
 
 /* footer */
 
