--- a/front-end/landing-page.css
+++ b/front-end/landing-page.css
@@ -157,6 +157,8 @@ section h5 {
   border-radius: 50%;
   padding: 30px;
   color: white;
+  position: absolute;
+  right: 150px;
 }
 
 .address {
@@ -182,6 +184,8 @@ section h5 {
   border-radius: 50%;
   padding: 30px;
   color: white;
+  position: absolute;
+  right: 150px;
 }
 
 .phone {
@@ -207,6 +211,8 @@ section h5 {
   border-radius: 50%;
   padding: 30px;
   color: white;
+  position: absolute;
+  right: 150px;
 }
 
 .email{
